--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.4.0",
     "react-vertical-timeline-component": "^3.6.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
