--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.300.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.10.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
